fix; broken card alignment

--- a/style.css
+++ b/style.css
@@ -201,7 +201,7 @@ li a {
 }
 
 .tags {
-  margin-top: 32px;
+  margin-top: 28px;
   margin-left: 42px;
 }
 
